# python-computer-craft

./: .gitignore  .replit  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg  setup.py
computercraft/: sess.py
computercraft/subapis/: _pkg.py
examples/: _lib.py  test_commands.py  test_peripheral_commandblock.py  test_peripheral_disk.py  test_peripheral_monitor.py  test_peripheral_printer.py  test_peripheral_speaker.py  test_term.py
src/cc_secure.egg-info/: PKG-INFO
tests/: serialization.py
