[metadata]
name = cc-secure
version = 0.1.0
author = TheKidThatCodes
description = Pythonization of ComputerCraft Minecraft mod. Write Python instead Lua! Fork by TheKidThatCodes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment

[options]
package_dir =
    = src
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    aiohttp
    greenlet
    RestrictedPython
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
luafile = back.lua

[options.entry_points]
console_scripts =
    executable-name = cc-secure.server:main